[DSTEW-1578b] - Add submission schema validation. (#8)
* [DSTEW-1578b] - Refactor schema validation and add Submission validation

* [DSTEW-1578b] - Add more tests

* [DSTEW-1578] - Add more tests and start to refactor context

* [DSTEW-1578b] - Add TODO for duplicate validation

* [DSTEW-1578] - Fix submission status validator

* [DSTEW-1578b] - Complete context switch of validators

* [DSTEW-1578] - Remove return value from validators and use context

* [DSTEW-1578] - Fix tests

* [DSTEW-1578b] - Migrate and refactor retry logic

* [DSTEW-1578] - Migrate PDA retry logic

* [DSTEW-1578] - Add more test coverage

* [DSTEW-1578] - Publish reference API's

* [DSTEW-1578] - PR refactor to avoid duplication